tests/deterministic/full_evaluation_log.txt
ERROR: 'charmap' codec can't encode character '\u2713' in position 11: character maps to <undefined>
[MAIN-LOG] ========================================
[MAIN-LOG] Starting evaluation for: cmake/cmake_hello_world
[MAIN-LOG] ========================================
[MAIN-LOG] Script directory: C:\src\github.com\GreenFuze\spade\tests\deterministic
[MAIN-LOG] Deterministic path: C:\src\github.com\GreenFuze\spade\tests\deterministic\cmake/cmake_hello_world
[MAIN-LOG] Repository path: C:\src\github.com\GreenFuze\spade\tests\test_repos\cmake/cmake_hello_world
Ground truth file: C:\src\github.com\GreenFuze\spade\tests\deterministic\cmake/cmake_hello_world\cmake_hello_world_ground_truth.json
Loaded 30 evaluation questions

=== Evaluating CLAUDE ===
[MAIN-LOG] Repository: C:\src\github.com\GreenFuze\spade\tests\test_repos\cmake/cmake_hello_world
[MAIN-LOG] Output directory: C:\src\github.com\GreenFuze\spade\tests\deterministic\cmake/cmake_hello_world
[MAIN-LOG] Running claude WITHOUT RIG...
[MAIN-LOG] Prompt length: 2437 characters
[MAIN-LOG] Number of questions: 30
[MAIN-LOG] Executing claude...
[EXECUTOR-LOG] Running WSL command for claude
[EXECUTOR-LOG] Command: python3 "/mnt/c/src/github.com/GreenFuze/spade/tests/deterministic/wsl_runners/run_claude.py" "/mnt/c/Users/green/AppData/Local/Temp/claude_repo_nis4v59t/cmake_hello_world/.agent_prompt.txt" "/mnt/c/U...
[EXECUTOR-LOG] WSL command completed with return code: 0
[EXECUTOR-LOG] stdout (1007 chars):
[LOG] Working directory: /mnt/c/Users/green/AppData/Local/Temp/claude_repo_nis4v59t/cmake_hello_world
[LOG] Prompt file: /mnt/c/Users/green/AppData/Local/Temp/claude_repo_nis4v59t/cmake_hello_world/.agent_prompt.txt
[LOG] Prompt length: 2437 characters
[LOG] Expecting answers for 30 questions: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
[LOG] Starting Claude agent execution...
[LOG] Claude execution completed successfully
[LOG] Response length: 205 characters
[LOG] ✓ READY! signal detected in response
[LOG] Validating answers.json at: /mnt/c/Users/green/AppData/Local/Temp/claude_repo_nis4v59t/cmake_hello_world/answers.json
[LOG] ✓ Validation passed: answers.json is complete

--- Agent Response ---
I'll analyze this repository to answer all the questions. Let me start by exploring the repository structure.Now I have all the information I need to answer the questions. Let me compile the answers:READY!
--- End Response ---


[EXECUTOR-LOG] stderr (2085 chars):
Task exception was never retrieved
future: <Task finished name='Task-6' coro=<<async_generator_athrow without __name__>()> exception=RuntimeError('Attempted to exit cancel scope in a different task than it was entered in')>
Traceback (most recent call last):
  File "/home/tcs/.local/lib/python3.12/site-packages/claude_agent_sdk/_internal/client.py", line 119, in process_query
    yield parse_message(data)
GeneratorExit

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/tcs/.local/lib/python3.12/site-packages/claude_agent_sdk/_internal/client.py", line 122, in process_query
    await query.close()
  File "/home/tcs/.local/lib/python3.12/site-packages/claude_agent_sdk/_internal/query.py", line 543, in close
    await self._tg.__aexit__(None, None, None)
  File "/home/tcs/.local/lib/python3.12/site-packages/anyio/_backends/_asyncio.py", line 792, in __aexit__
    return self.cancel_scope.__exit__(exc_type, exc_val, exc_tb)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/tcs/.local/lib/python3.12/site-packages/anyio/_backends/_asyncio.py", line 459, in __exit__
    raise RuntimeError(
RuntimeError: Attempted to exit cancel scope in a different task than it was entered in
Exception ignored in: <function BaseSubprocessTransport.__del__ at 0x7f4e97767920>
Traceback (most recent call last):
  File "/usr/lib/python3.12/asyncio/base_subprocess.py", line 126, in __del__
    self.close()
  File "/usr/lib/python3.12/asyncio/base_subprocess.py", line 104, in close
    proto.pipe.close()
  File "/usr/lib/python3.12/asyncio/unix_events.py", line 568, in close
    self._close(None)
  File "/usr/lib/python3.12/asyncio/unix_events.py", line 592, in _close
    self._loop.call_soon(self._call_connection_lost, exc)
  File "/usr/lib/python3.12/asyncio/base_events.py", line 795, in call_soon
    self._check_closed()
  File "/usr/lib/python3.12/asyncio/base_events.py", line 541, in _check_closed
    raise RuntimeError('Event loop is closed')
RuntimeError: Event loop is closed

[MAIN-LOG] Execution completed. Result type: <class 'list'>
